# PowerSpotEngine

./: .gitignore  CMakeLists.txt  README.md
bindings/: CMakeLists.txt
examples/: ExampleStrategy.cpp  ExampleStrategy.hpp
include/engine/: Event.hpp  Order.hpp  Trade.hpp
include/utils/: Utils.hpp
src/: CMakeLists.txt
src/engine/: BacktestEngine.cpp  BacktestEngine.hpp  CMakeLists.txt  EventQueue.cpp  EventQueue.hpp  MarketSimulator.cpp  MarketSimulator.hpp  OrderManager.cpp  OrderManager.hpp  PortfolioManager.cpp  PortfolioManager.hpp  StrategyInterface.cpp  StrategyInterface.hpp
src/utils/: ConfigParser.cpp  ConfigParser.hpp  Logger.cpp  Logger.hpp
tests/: CMakeLists.txt  test_backtest_engine.cpp  test_event_queue.cpp  test_main.cpp  test_market_simulator.cpp  test_order_manager.cpp  test_portfolio_manager.cpp
